--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<a>这里是success.html页面</a>
+<h1>这里是success.html页</h1>
+<!--th:text将div里面的文本内容设置为-->
+<div th:text="${hello}"> 这里显示欢迎信息！</div>
+<div th:utext="${hello}"> 这里显示欢迎信息！</div>
 
+
+<!--三个h4-->
+<h4 th:text="${user}" th:each="user:${users}"></h4>
+<hr/>
+<h4>
+    <span  th:each="user:${users}">[[${user}]]</span>
+</h4>
 </body>
 </html>
