--- a/src/main/resources/templates/emp/add.html
+++ b/src/main/resources/templates/emp/add.html
@@ -108,22 +108,22 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script type="text/javascript" th:src="/static/asserts/js/jquery-3.2.1.slim.min.js"
+<script type="text/javascript" th:src="@{/static/asserts/js/jquery-3.2.1.slim.min.js}"
         src="../../static/asserts/js/jquery-3.2.1.slim.min.js"></script>
-<script type="text/javascript" th:src="/static/asserts/js/popper.min.js"
+<script type="text/javascript" th:src="@{/static/asserts/js/popper.min.js}"
         src="../../static/asserts/js/popper.min.js"></script>
-<script type="text/javascript" th:src="/static/asserts/js/bootstrap.min.js"
+<script type="text/javascript" th:src="@{/static/asserts/js/bootstrap.min.js}"
         src="../../static/asserts/js/bootstrap.min.js"></script>
 
 <!-- Icons -->
-<script type="text/javascript" th:src="/static/asserts/js/feather.min.js"
+<script type="text/javascript" th:src="@{/static/asserts/js/feather.min.js}"
         src="../../static/asserts/js/feather.min.js"></script>
 <script>
     feather.replace()
 </script>
 
 <!-- Graphs -->
-<script type="text/javascript" th:src="/static/asserts/js/Chart.min.js"
+<script type="text/javascript" th:src="@{/static/asserts/js/Chart.min.js}"
         src="../../static/asserts/js/Chart.min.js"></script>
 <script>
     var ctx = document.getElementById("myChart");
