--- a/src/main/resources/templates/emp/list.html
+++ b/src/main/resources/templates/emp/list.html
@@ -17,7 +17,6 @@
     <link href="/asserts/css/dashboard.css" th:href="@{/asserts/css/dashboard.css}" rel="stylesheet">
     <style type="text/css">
         /* Chart.js */
-
         @-webkit-keyframes chartjs-render-animation {
             from {
                 opacity: 0.99
@@ -26,7 +25,6 @@
                 opacity: 1
             }
         }
-
         @keyframes chartjs-render-animation {
             from {
                 opacity: 0.99
@@ -35,7 +33,6 @@
                 opacity: 1
             }
         }
-
         .chartjs-render-monitor {
             -webkit-animation: chartjs-render-animation 0.001s;
             animation: chartjs-render-animation 0.001s;
@@ -53,7 +50,7 @@
         <div th:replace="commons/bar::#sidebar(activeUri='emps')"></div>
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
             <h2>
-                <a class="btn btn-sm btn-success" th:href="@{/emp}">添加</a>
+                <a class="btn btn-sm btn-success" href="emp" th:href="@{/emp}">添加</a>
             </h2>
             <div class="table-responsive">
                 <table class="table table-striped table-sm">
@@ -94,15 +91,15 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script type="text/javascript" th:src="/static/asserts/js/jquery-3.2.1.slim.min.js"
+<script type="text/javascript" th:src="@{/static/asserts/js/jquery-3.2.1.slim.min.js}"
         src="../../static/asserts/js/jquery-3.2.1.slim.min.js"></script>
-<script type="text/javascript" th:src="/static/asserts/js/popper.min.js"
+<script type="text/javascript" th:src="@{/static/asserts/js/popper.min.js}"
         src="../../static/asserts/js/popper.min.js"></script>
-<script type="text/javascript" th:src="/static/asserts/js/bootstrap.min.js"
+<script type="text/javascript" th:src="@{/static/asserts/js/bootstrap.min.js}"
         src="../../static/asserts/js/bootstrap.min.js"></script>
 
 <!-- Icons -->
-<script type="text/javascript" th:src="/static/asserts/js/feather.min.js"
+<script type="text/javascript" th:src="@{/static/asserts/js/feather.min.js}"
         src="../../static/asserts/js/feather.min.js"></script>
 <script>
     feather.replace()
@@ -116,7 +113,7 @@
 </script>
 
 <!-- Graphs -->
-<script type="text/javascript" th:src="/static/asserts/js/Chart.min.js"
+<script type="text/javascript" th:src="@{/static/asserts/js/Chart.min.js}"
         src="../../static/asserts/js/Chart.min.js"></script>
 <script>
     var ctx = document.getElementById("myChart");
